--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,13 @@
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, 
-pre, form, fieldset, input, textarea, p, blockquote, th, td { 
+pre, form, fieldset, input, textarea, p, blockquote, th, td {
   padding:0;
-  margin:0;}
+  margin:0;
+  }
 
 fieldset, img {border:0}
 
-ol, ul, li {list-style:none}
+ol, ul, li {list-style:none;}
 
 :focus {outline:none}
 
@@ -19,11 +20,11 @@ select {
   color: #4c4c4c;
 }
 
-p {
+.signuptext {
   font-size: 12px;
   width: 150px;
   display: inline-block;
-  margin-left: 18px;
+  /* margin-left: 18px; */
 }
 h1 {
   font-size: 32px;
@@ -158,7 +159,7 @@ input[type=password]{
   margin-top: 20px;
 }
 
-button {
+.button {
   font-size: 16px;
   font-weight: 600;
   color: white;
@@ -167,19 +168,41 @@ button {
   display: inline-block;
   float: right;
   text-decoration: none;
-  width: 105px; height: 27px; 
-  -webkit-border-radius: 5px; 
-  -moz-border-radius: 5px; 
-  border-radius: 5px; 
-  background-color: #3a57af; 
-  -webkit-box-shadow: 0 3px rgba(58,87,175,.75); 
-  -moz-box-shadow: 0 3px rgba(58,87,175,.75); 
+  width: 105px;
+  height: 27px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #3a57af;
+  -webkit-box-shadow: 0 3px rgba(58,87,175,.75);
+  -moz-box-shadow: 0 3px rgba(58,87,175,.75);
   box-shadow: 0 3px rgba(58,87,175,.75);
-  transition: all 0.1s linear 0s; 
+  transition: all 0.1s linear 0s;
   top: 0px;
   position: relative;
 }
+.post__button{
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  padding: 0px 25px 0px 20px;
+  margin: 10px 8px 20px 0px;
+  display: inline-block;
+  text-decoration: none;
+  width: 105px;
+  height: 27px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #3a57af;
+  -webkit-box-shadow: 0 3px rgba(58,87,175,.75);
+  -moz-box-shadow: 0 3px rgba(58,87,175,.75);
+  box-shadow: 0 3px rgba(58,87,175,.75);
+  transition: all 0.1s linear 0s;
+  top: 0px;
+  position: relative;
 
+}
 button:hover {
   top: -1px;
   background-color:#2e458b;
@@ -200,11 +223,12 @@ button:hover {
         height: auto !important;
 }
 
-.card {
+.myCard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
+  /* max-width: 300px; */
+  margin: 50px auto;
+  /* text-align: center; */
+  /* display: flex; */
 }
 
 .title {
@@ -233,4 +257,80 @@ button:hover {
 
 .logoutBtn, a:hover {
   opacity: 0.7;
+}
+.posts{
+      margin-top:50px;
+}
+
+.userName {
+    display: inline;
+    align-content: flex-end;
+    vertical-align: top;
+}
+.img{
+    /* width: 270px; */
+    /* position: relative; */
+    height: 150px;
+}
+.create__post{
+    text-align: center;
+    margin-top:50px;
+}
+
+.posts__container{
+    margin: 0 auto;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+}
+li{
+  list-style: none;
+    padding: 10px;
+    font-size: 18px;
+    /* padding: 10px; */
+    transform: rotate(-180deg);
+}
+ul{
+  transform: rotate(180deg);
+}
+.posts__input{
+      border-top:none;
+      border-left:none;
+      border-right:none;
+      position: relative;
+      top: 0px;
+      border-bottom-color: darkslateblue;
+}
+.posts__input::placeholder{
+    text-align: center;
+}
+@media (max-width:775px)
+{
+  .myCard{
+      text-align:center;
+      overflow: hidden;
+  }
+  .posts__input{
+    width:200px;
+}
+}
+@media (min-width:775px)
+{
+  .myCard{
+      display:flex;
+      overflow: hidden;
+  }
+  .posts__input{
+    width:450px;
+}
+.myCard__content{
+    margin-top:50px;
+}
+.navbar{
+  justify-content: center !important;
+}
+}
+.userPost{
+    width:100%;
+    font-size:16px;
 }
